add: auth-service
